修改封盘时间

--- a/src/data/ruleIntro.html
+++ b/src/data/ruleIntro.html
@@ -1,12 +1,10 @@
-<p>1.什么是PK拾：</p>
-<p>PK拾是竞猜10个开奖号码排列顺序的快开型彩种，玩家根据不同的玩法，竞猜不同位数中的号码排序</p>
-<p>1.什么是PK拾：</p>
-<p>PK拾是竞猜10个开奖号码排列顺序的快开型彩种，玩家根据不同的玩法，竞猜不同位数中的号码排序</p>
-<p>1.什么是PK拾：</p>
-<p>PK拾是竞猜10个开奖号码排列顺序的快开型彩种，玩家根据不同的玩法，竞猜不同位数中的号码排序</p>
-<p>1.什么是PK拾：</p>
-<p>PK拾是竞猜10个开奖号码排列顺序的快开型彩种，玩家根据不同的玩法，竞猜不同位数中的号码排序</p>
-<p>1.什么是PK拾：</p>
-<p>PK拾是竞猜10个开奖号码排列顺序的快开型彩种，玩家根据不同的玩法，竞猜不同位数中的号码排序</p>
-<p>1.什么是PK拾：</p>
-<p>PK拾是竞猜10个开奖号码排列顺序的快开型彩种，玩家根据不同的玩法，竞猜不同位数中的号码排序</p>
+<h2>欢乐PK活动规则</h2>
+<p>欢乐PK是采取国家发行北京赛车彩种玩开奖数据。开奖号码采取北京赛车的开奖数据第一位与第十位两数和值尾数，所有奖励奖金为金币；</p>
+<p>游戏时间：9：00-23:59，每天179期，五分钟开奖。</p>
+<h3>投资区域及赔率（奖励）说明</h3>
+<p>1.数字：奖励为1：9倍（奖励含本金）。</p>
+<p>2.大小单双：0-4为小5-9为大，奇数为单，偶数为双。奖励为1：1.8（奖励含本金）。</p>
+（奖励）解释：1：1.8（含本金），例如用户购买100金币，奖励1：1.8（奖励1.8倍），若中奖，用户将获得180金币回报，以此类推。
+<h3>联络客服</h3>
+<p>1.如在游戏过程中遇到任何问题，请联系客服。客服电话：18950882335.</p>
+<p>2.欢迎各位玩友加QQ群 106701492 进行讨论。</p>
